reorganize and add some supporting text

--- a/index.html
+++ b/index.html
@@ -43,17 +43,22 @@
 
 				<section>
 					<section>
+						<h2>Avi Schwab</h2>
+						<h3>Senior Front-End Developer</h3>
+						<h4><a href="http://www.uchicago.edu">University of Chicago</a> &gt; <a href="http://itservices.uchicago.edu">IT Services</a> &gt; <a href="http://webservices.uchicago.edu">Web Services</a></h4>
+						<h4><a href="https://www.drupal.org/u/froboy">drupal.org/u/froboy</a></h4>
+					</section>
+					<section>
+						<h2>I manage <a href="http://sites.uchicago.edu">UChicago Sites</a></h2>
+						<p>Hosted templating service for departments, divisions, offices, labs, and more at UChicago with over 300 live sites and another 100+ in development.</p>
+						<p>All this is to say... We have many users of all skills and abilities.</p>
+					</section>
+					<section>
 						<h1>10 Things I Hate About U(sers)</h1>
 						<p>or</p>
 						<h2>The Taming of the User</h2>
 						<p>or</p>
 						<h3>How I Learned to Stop Worrying and Love the User</h3>
-					</section>
-					<section>
-						<h2>Avi Schwab</h2>
-						<h3>Senior Front-End Developer</h3>
-						<h3>Web Services | IT Services | University of Chicago</h3>
-						<h4><a href="https://www.drupal.org/u/froboy">drupal.org/u/froboy</a></h4>
 					</section>
 				</section>
 
@@ -159,6 +164,7 @@
 
 				<section>
 					<h3>Thanks.</h3>
+					<p>P.S. We're hiring. <a href="http://bit.ly/ITS-FED">bit.ly/ITS-FED</a></p>
 				</section>
 
 			</div>
