--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
 		<title>10 Things I Hate About U(sers)</title>
 
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<meta name="description" content="10 Things I Hate About U(sers), a 10-minute presentation for the Chicago Area Drupal Meetup Group">
+		<meta name="author" content="Avi Schwab">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
