adding link to licecap

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 				<section>
 					<h3>Thanks.</h3>
 					<p>P.S. We're hiring. <a href="http://bit.ly/ITS-FED">bit.ly/ITS-FED</a></p>
+					<p><small>Screenshots made with <a href="http://www.cockos.com/licecap/">LICEcap</a>. As <a href="https://blog.intercom.io/show-dont-tell-gifs/">other internet people say</a> "It’s not an attractive name, it’s not a sexy product, but it’s amazing for recording a portion of your desktop into a GIF."</small></p>
 				</section>
 
 			</div>
